# mono-music-manager

./: .gitignore  CONTRIBUTING.md  README.md  meson.build  mono-music-manager.sublime-project  sanitizer-blacklist.txt  sqlite-database.html
include/momuma/: bitset.h  enum_operators.h  momuma.h  sigc.h  spdlog.h
include/momuma/internal/: AudioPlayer.h  Database-Sqlite3.h  IDatabase.h  MpvPlayer.h  misc.h
src/: AudioPlayer.cpp  Database-Sqlite3.cpp  MpvPlayer.cpp  meson.build  misc.cpp  momuma.cpp
tests/: ctest__database.cpp  ctest__mpv_player.cpp  ctest_mpv-player.cpp  meson.build
